Started update of OAuth-flow